--- a/ansible/roles/kibana/handlers/main.yml
+++ b/ansible/roles/kibana/handlers/main.yml
@@ -3,9 +3,9 @@
   vars:
     service_name: "kibana"
     service: "{{ kibana_services[service_name] }}"
-    config_json: "{{ kibana_config_jsons.results|selectattr('item.key', 'equalto', service_name)|first }}"
-    kibana_conf: "{{ kibana_confs.results|selectattr('item.key', 'equalto', service_name)|first }}"
-    kibana_container: "{{ check_kibana_containers.results|selectattr('item.key', 'equalto', service_name)|first }}"
+    # config_json: "{{ kibana_config_jsons.results|selectattr('item.key', 'equalto', service_name)|first }}"
+    # kibana_conf: "{{ kibana_confs.results|selectattr('item.key', 'equalto', service_name)|first }}"
+    # kibana_container: "{{ check_kibana_containers.results|selectattr('item.key', 'equalto', service_name)|first }}"
   become: true
   kolla_docker:
     action: "recreate_or_restart_container"
@@ -14,10 +14,10 @@
     image: "{{ service.image }}"
     volumes: "{{ service.volumes }}"
     dimensions: "{{ service.dimensions }}"
-  when:
-    - kolla_action != "config"
-    - inventory_hostname in groups[service.group]
-    - service.enabled | bool
-    - config_json.changed | bool
-      or kibana_conf.changed | bool
-      or kibana_container.changed | bool
+  # when:
+  #   - kolla_action != "config"
+  #   - inventory_hostname in groups[service.group]
+  #   - service.enabled | bool
+  #   - config_json.changed | bool
+  #     or kibana_conf.changed | bool
+  #     or kibana_container.changed | bool
