Find Monasca agent plugins locally

--- a/ansible/roles/monasca/tasks/config.yml
+++ b/ansible/roles/monasca/tasks/config.yml
@@ -61,7 +61,8 @@
     - service.enabled | bool
 
 - name: Find monasca-agent-collector plugin configuration files
-  find:
+  local_action:
+    module: find
     paths:
       - "{{ role_path }}/templates/monasca-agent-collector/plugins/"
       - "{{ node_custom_config }}/monasca/agent_plugins/"
